--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,5 +5,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "Running!"
-      - run: npm install
+      - run: cd ../..
+             npm install
       - run: npm --version
