--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,5 +6,5 @@ jobs:
     steps:
       - run: echo "Running!"
       - run: cd ../..
-             npm install
+      - run: npm install
       - run: npm --version
