--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,21 @@
-on: push
+name: Install Dependencies
+
+on:
+  push:
+    branches:
+      - main
 
 jobs:
-  print:
+  install:
     runs-on: ubuntu-latest
+
     steps:
-      - run: echo "Running!"
-      - run: cd ../..
-      - run: npm install
-      - run: npm --version
+    - uses: actions/checkout@v2
+
+    - name: Use Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14'
+
+    - name: Install dependencies
+      run: npm install
