--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,40 +1,35 @@
-name: demo
- 
-on: [push]
- 
+name: trigger
+
+on:
+  push:
+    branches:
+      - main
+
 jobs:
   build:
     runs-on: ubuntu-latest
- 
+
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
- 
-    - name: Set up Node.js
+    -name: repo checkout
+    - uses: actions/checkout@v2
+
+    - name: install Node.js
       uses: actions/setup-node@v2
       with:
         node-version: '16'
- 
-    - name: Install lng
-      run: |
-        npm install -g @lightningjs/cli
-       
-        lng --version
- 
+
     - name: Install dependencies
+      run: npm install -g @lightningjs/cli
+           lng --version
+    - name: check current working directory
+      run: chdir
+    -name: install node modules 
       run: npm install
-      working-directory: ./
- 
-    - name: Create dist
+    -name: create lng dist
       run: lng dist
-      working-directory: ./
- 
-    - name: Commit and Push dist folder
-      run: |
-        git config  user.email "santhoshichimakurthi@gmail.com"
-        git config user.name "santhoshichimakurthi"
-        git add ./dist
-        git commit -m "Add dist folder"
-        git push -f origin main
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Commit and push changes
+      uses: devops-infra/action-commit-push@master
+        with:
+          github_token: ${{ secrets.TestGit_Token }}
+          commit_message: Replaced dist folder auto commit from trigger
+      
