--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           commit_message: Replaced dist folder auto commit from trigger using stefanz
           branch: main
-          commit_user_name: santhoshichimakurthi
-          commit_user_email: santhoshichimakurthi@gmail.com
+          commit_user_name: "santhoshichimakurthi"
+          commit_user_email: "santhoshichimakurthi@gmail.com"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
