--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,3 @@
----
 name: trigger
 on:
   push:
@@ -24,12 +23,12 @@ jobs:
       - name: create lng dist
         run: lng dist
         working-directory: ./
-      - name: commit changes to repo
-        run: 
-         git config --global user.email "santhoshichimakurthi@gmail.com"
-         git config --global user.name "santhoshichimakurthi"
-         git add .
-         git commit -m "Add dist folder"
-         git push origin main
+      - name: Commit and push changes
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: Replaced dist folder auto commit from trigger using stefanz
+          branch: main
+          commit_user_name: santhoshichimakurthi
+          commit_user_email: santhoshichimakurthi@gmail.com
         env:
           GITHUB_TOKEN: ${{ secrets.TESTGIT_TOKEN }}
